--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,15 @@ version = "0.1.0"
 authors = ["reiyw <reiyw.setuve@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "kb_tool"
+crate-type = ["cdylib"]
 
 [dependencies]
-structopt = "0.3"
 counter = "0.4"
 rand = "0.7"
+rand_distr = "0.2"
+
+[dependencies.pyo3]
+version = "0.8.5"
+features = ["extension-module"]
