wip negative sampling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kb-tool"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["reiyw <reiyw.setuve@gmail.com>"]
 edition = "2018"
 
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 counter = "0.4"
 rand = "0.7"
 rand_distr = "0.2"
+ndarray = "0.13.1"
 
 [dependencies.pyo3]
 version = "0.8.5"
